--- a/src/views/Game/Game.module.scss
+++ b/src/views/Game/Game.module.scss
@@ -10,11 +10,13 @@
   }
 
   .media {
+    background-color: $white;
     width: 300px;
     max-width: 100%;
     margin: 1rem auto 0;
     & > * {
       width: 100%;
+      vertical-align: top;
     }
   }
 
