--- a/src/views/Question/Question.module.scss
+++ b/src/views/Question/Question.module.scss
@@ -1,10 +1,16 @@
+@import "bulma/sass/utilities/initial-variables.sass";
+@import "bulma/sass/utilities/derived-variables.scss";
+@import "bulma/sass/utilities/mixins.sass";
+
 .question {
   .media {
+    background-color: $white;
     width: 300px;
     max-width: 100%;
     margin: 1rem auto 0;
     & > * {
       width: 100%;
+      vertical-align: top;
     }
   }
 
