--- a/src/views/Quiz/Quiz.module.scss
+++ b/src/views/Quiz/Quiz.module.scss
@@ -14,6 +14,7 @@
   }
 
   .media {
+    background-color: $white;
     width: 300px;
     max-width: 100%;
     margin: 1rem auto 0;
