--- a/src/views/admin/quizzes/Quizzes.module.scss
+++ b/src/views/admin/quizzes/Quizzes.module.scss
@@ -25,10 +25,12 @@
 }
 
 .media {
+  background-color: $white;
   width: 300px;
   max-width: 100%;
   margin: 1rem auto 0;
   & > * {
     width: 100%;
+    vertical-align: top;
   }
 }
